To string for params on service details

--- a/src/pages/services/[id].astro
+++ b/src/pages/services/[id].astro
@@ -4,7 +4,7 @@ import Layout from "../../layouts/Layout.astro";
 export async function getStaticPaths() {
     return services.map((service) => {
         return {
-            params: { id: service.id.toString() },
+            params: { id: service.id },
             props: { service }
         };
     });
@@ -14,6 +14,25 @@ const { service } = Astro.props;
 ---
 
 <Layout title="Service">
+    <nav class="bread-crumbs">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <ul class="bread-crumbs-list">
+                        <li>
+                            <a href="index.html">Home</a>
+                            <i class="material-icons md-18">chevron_right</i>
+                        </li>
+                        <li>
+                            <a href="services.html">Services</a>
+                            <i class="material-icons md-18">chevron_right</i>
+                        </li>
+                        <li><a href="#!">Corporate Solutions</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </nav>
     <div class="section">
         <div class="container">
             <div class="row">
