Change phone number

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,15 +7,15 @@
                     <!-- Begin header top info -->
                     <ul class="header-top-info">
                         <li>
-                            <a href="mailto:mail@example.com">
+                            <a href="mailto:rigon@gmail.com">
                                 <i class="material-icons md-18">mail_outline</i>
                                 <span>rigon@gmail.com</span>
                             </a>
                         </li>
                         <li>
-                            <a href="mailto:mail@example.com" class="formingHrefTel">
+                            <a href="tel:+1 809-893-7641" class="formingHrefTel">
                                 <i class="material-icons md-18">phone_in_talk</i>
-                                <span>+1-888-777-123</span>
+                                <span>+1 809-893-7641</span>
                             </a>
                         </li>
                     </ul>
