Change phone number

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -58,11 +58,11 @@
                                     <a href="/about" class="hover-link" data-title="Quiénes somos"><span>Quiénes somos</span></a>
                                 </li>
                                 <li>
-                                    <a href="/services" class="hover-link" data-title="Services"><span>Servicios</span></a>
+                                    <a href="/services" class="hover-link" data-title="Servicios"><span>Servicios</span></a>
                                 </li>
 
                                 <li>
-                                    <a href="/contact" class="hover-link" data-title="Contact Us"><span>Contáctanos</span></a>
+                                    <a href="/contact" class="hover-link" data-title="Contáctanos"><span>Contáctanos</span></a>
                                 </li>
                             </ul>
                         </nav>
