Privacity/Terms pages

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -122,8 +122,8 @@
                 <div class="col-md-auto col-12 item">
                     <nav class="footer-links">
                         <ul>
-                            <li><a href="terms-and-conditions.html">Términos y Condiciones</a></li>
-                            <li><a href="privacy-policy.html">Políticas de privacidad</a></li>
+                            <li><a href="/terms-and-conditions">Términos y Condiciones</a></li>
+                            <li><a href="/privacy-policy">Políticas de privacidad</a></li>
                         </ul>
                     </nav>
                 </div>
