--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,39 +10,41 @@ import services from "../data/services.json";
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading heading-center">
+                    
                         <h1>Quiénes somos</h1>
                     </div>
                     <div class="content">
                         <div class="img-style">
                             <img src="assets/img/about-img.jpg" alt="" />
                         </div>
-                        <h2>Developing High-quality Apps</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        <p>
-                            Welcome to our wonderful world. We sincerely hope that each and every user entering our website will find exactly what he/she is looking for. With advanced features of
-                            activating account and new login widgets, you will definitely have a great experience of using our web page. It will tell you lots of interesting things about our company,
-                            its products and services, highly professional staff and happy customers. Our site design and navigation has been thoroughly thought out. The layout is aesthetically
-                            appealing, contains concise texts in order not to take your precious time. Text styling allows scanning the pages quickly. Site navigation is extremely intuitive and
-                            user-friendly. You will always know where you are now and will be able to skip from one page to another with a single mouse click. We use only trusted, verified content.
-                        </p>
-                        <h3>Providing Reliable Software</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                        </p>
-                        <p>
-                            Welcome to our wonderful world. We sincerely hope that each and every user entering our website will find exactly what he/she is looking for. With advanced features of
-                            activating account and new login widgets, you will definitely have a great experience of using our web page. It will tell you lots of interesting things about our company,
-                            its products and services, highly professional staff and happy customers. Our site design and navigation has been thoroughly thought out. The layout is aesthetically
-                            appealing, contains concise texts in order not to take your precious time. Text styling allows scanning the pages quickly. Site navigation is extremely intuitive and
-                            user-friendly. You will always know where you are now and will be able to skip from one page to another with a single mouse click. We use only trusted, verified content.
-                        </p>
-                        <h3>Supporting Our Clients</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                        </p>
+                        
+                        <p>Bienvenido a nuestro maravilloso mundo. Nuestra Empresa, RIGON MULTISERVICES, les da la bienvenida. Esperamos sinceramente que todos y cada uno de los usuarios que ingresen a nuestro sitio web encuentren exactamente 
+                            lo que están buscando. </p>
+
+                        <p>Con funciones avanzadas y sofisticadas, definitivamente tendrá una gran experiencia 
+                            al usar nuestra página web. Le dirá muchas cosas interesantes sobre nuestra empresa, sus productos y servicios, personal altamente profesional y clientes 
+                            satisfechos. El diseño y la navegación de nuestro sitio han sido cuidadosamente pensado. </p>
+
+                        <p>El diseño es estéticamente atractivo, contiene textos concisos para no tomar su valioso tiempo. El estilo de texto permite escanear las páginas rápidamente. 
+                            La navegación del sitio es extremadamente intuitiva y fácil 
+                            de usar. Siempre sabrá dónde se encuentra ahora y podrá saltar de una página a otra con un solo clic del mouse. Solo usamos contenido confiable y verificado.</p>
+
+                        <p>Nuestra compañía lleva más de 8 años en el mercado, y hace aproximadamente 2 años, estamos incursionando en el mercado Dominicano, llevando las mejores 
+                            soluciones tecnológicas a cada cliente.</p>
+                            
+                        <p>Brindamos nuestros servicios utilizando siempre la ultima tecnología, proporcionando asi los diseños más innovadores y la mayor calidad en herramientas, 
+                            obteniendo como resultado final la comodidad de nuestro cliente.</p>  
+                        <p>¡¡¡Vienvenido a la nueva era Digital y Tecnológico!!!</p>        
+
+                        <p>El éxito en nuestro sector está basado en el capital humano, la tecnología y la innovación, siendo estos los activos más importantes 
+                            de RIGON, y esta filosofía de empresa es la que aportamos a cada uno de nuestros clientes.</p>         
+                                                        
+                        <p>    
+                            RIGON dispone de diversas unidades de negocio ampliamente especializadas en ofrecer soluciones y servicios informáticos eficientes en su correspondiente 
+                            área de trabajo. Ofrecemos, además, la posibilidad de un servicio integral, en lo que a Tecnologías de la Información se refiere, desde el diseño del plan 
+                            de sistemas de información hasta la implantación y mantenimiento de los mismos, para que cualquier empresa u organización pueda contar con la solución 
+                            informática adecuada y óptima en todo momento, y en línea con sus objetivos.</p>
+                                              
                     </div>
                 </div>
             </div>
