--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,14 +23,14 @@ import Footer from "../components/Footer.astro";
         <meta name="og:type" property="og:type" content="website" />
         <meta property="og:description" content="RIGON Multiservices - IT Soluciones" />
         <meta property="og:title" content="RIGON Multiservices - IT Soluciones" />
-        <meta property="og:image" content="/assets/img/logo.png" />
+        <meta property="og:image" content="https://rigon.onrender.com/assets/img/logo.png" />
         <meta property="og:url" content="https://rigon.onrender.com" />
 
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:site" content="rigon-multiservices" />
         <meta name="twitter:title" content="Astro | Build faster websites" />
         <meta name="twitter:description" content="RIGON Multiservices - IT Soluciones" />
-        <meta name="twitter:image" content="/assets/img/sprite.svg#twitter-icon" />
+        <meta name="twitter:image" content="https://rigon.onrender.com/assets/img/sprite.svg#twitter-icon" />
         <!-- /SEO ENDS-->
         <link rel="stylesheet" href="/assets/css/libs.css" /><link rel="stylesheet" href="/assets/css/style.css" /><link
             rel="preload"
