--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -107,7 +107,7 @@
                             <li>
                                 <i class="material-icons md-22 footer-contact-email">email</i>
                                 <div class="footer-contact-info">
-                                    <a href="mailto:rigon@gmail.com">rigon@gmail.com</a>
+                                    <a href="mailto:rigon@gmail.com">{import.meta.env.EMAIL}</a>
                                 </div>
                             </li>
                         </ul>
