--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,7 @@
                         <li>
                             <a href="mailto:rigon@gmail.com">
                                 <i class="material-icons md-18">mail_outline</i>
-                                <span>rigon@gmail.com</span>
+                                <span>{import.meta.env.EMAIL}</span>
                             </a>
                         </li>
                         <li>
