--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -35,7 +35,7 @@ import Layout from "../layouts/Layout.astro";
                             <li>
                                 <i class="material-icons md-22 footer-contact-email">email</i>
                                 <div class="footer-contact-info">
-                                    <a href="mailto:rigon@gmail.com">rigon@gmail.com</a>
+                                    <a href="mailto:rigon@gmail.com">rigonmultimedia@gmail.com</a>
                                 </div>
                             </li>
                         </ul>
