--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -149,10 +149,10 @@ import services from "../data/services.json";
                             </p>
                         </div>
                     </div>
-                    <ClientCard image="assets/img/brands/sentido_comun.png" />
-                    <ClientCard image="assets/img/brands/rimarrtv.png" />
-                    <ClientCard image="assets/img/brands/eva_caribbean.png" />
-                    <ClientCard image="assets/img/brands/alexandre_construction.png" />
+                    <ClientCard image="assets/img/brands/sentido_comun.png" alt="Sentido Común" />
+                    <ClientCard image="assets/img/brands/rimarrtv.png" alt="Rimarrtv" />
+                    <ClientCard image="assets/img/brands/eva_caribbean.png" alt="Eva Caribbean SRL" />
+                    <ClientCard image="assets/img/brands/alexandre_construction.png" alt="Alexandre Construction" />
                 </div>
             </div>
         </section>
