email and phone env var

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -102,7 +102,9 @@
                             </li>
                             <li>
                                 <i class="material-icons md-22 footer-contact-tel">smartphone</i>
-                                <div class="footer-contact-info"><a href="#!" class="formingHrefTel">+1 809-893-7641</a>, <a href="#!" class="formingHrefTel">+1 829-966-1186</a></div>
+                                <div class="footer-contact-info">
+                                    <a href="#!" class="formingHrefTel">{import.meta.env.MOBILE_MAIN}</a>, <a href="#!" class="formingHrefTel">{import.meta.env.MOBILE_SECONDARY}</a>
+                                </div>
                             </li>
                             <li>
                                 <i class="material-icons md-22 footer-contact-email">email</i>
