--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,7 +15,7 @@
                         <li>
                             <a href="tel:+1 809-893-7641" class="formingHrefTel">
                                 <i class="material-icons md-18">phone_in_talk</i>
-                                <span>+1 809-893-7641</span>
+                                <span>{import.meta.env.MOBILE_MAIN}</span>
                             </a>
                         </li>
                     </ul>
