--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -29,13 +29,13 @@ import Layout from "../layouts/Layout.astro";
                             <li>
                                 <i class="material-icons md-22 footer-contact-tel">smartphone</i>
                                 <div class="footer-contact-info">
-                                    <a href="tel:+1809-893-7641" class="formingHrefTel">+1 809-893-7641</a>
+                                    <a href="tel:+1809-893-7641" class="formingHrefTel">{import.meta.env.MOBILE_MAIN}</a>
                                 </div>
                             </li>
                             <li>
                                 <i class="material-icons md-22 footer-contact-email">email</i>
                                 <div class="footer-contact-info">
-                                    <a href="mailto:rigon@gmail.com">rigonmultimedia@gmail.com</a>
+                                    <a href="mailto:rigon@gmail.com">{import.meta.env.EMAIL}</a>
                                 </div>
                             </li>
                         </ul>
