email and phone env var

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -103,7 +103,8 @@
                             <li>
                                 <i class="material-icons md-22 footer-contact-tel">smartphone</i>
                                 <div class="footer-contact-info">
-                                    <a href="#!" class="formingHrefTel">{import.meta.env.MOBILE_MAIN}</a>, <a href="#!" class="formingHrefTel">{import.meta.env.MOBILE_SECONDARY}</a>
+                                    <a href="#!" class="formingHrefTel">{import.meta.env.MOBILE_MAIN}</a>
+                                    <a href="#!" class="formingHrefTel">{import.meta.env.MOBILE_SECONDARY}</a>
                                 </div>
                             </li>
                             <li>
